syntax = "proto3";
package cosmos.distribution.v1beta1;

message Coin {
    string denom  = 1;
    string amount = 2;
  }

message MsgFundCommunityPool {
  repeated Coin amount = 1;
  string depositor = 2;
}